[gd_scene load_steps=9 format=3 uid="uid://chot60kdu13pm"]

[ext_resource type="StyleBox" uid="uid://ctvr5y3gokvwv" path="res://Resources/Control_Nodes/Item_Frame_StyleBox.tres" id="1_kk50v"]
[ext_resource type="Script" path="res://Scripts/Menus/Item_Frame.gd" id="2_tk5gr"]
[ext_resource type="Texture2D" uid="uid://cdt4qfntbbuko" path="res://Sprites/Parts/Moving_Parts/Linear_Actuator_1_Base.png" id="3_0gdxt"]

[sub_resource type="Gradient" id="Gradient_411hi"]
offsets = PackedFloat32Array(0.422535)
colors = PackedColorArray(1, 1, 0, 0.392157)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_j0ijl"]
gradient = SubResource("Gradient_411hi")
width = 80
height = 80
fill_from = Vector2(0, 1)

[sub_resource type="Gradient" id="Gradient_g3jvv"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(1, 1, 1, 0.392157)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_i5mfc"]
gradient = SubResource("Gradient_g3jvv")
width = 80
height = 80

[sub_resource type="LabelSettings" id="LabelSettings_qfm0q"]
line_spacing = 0.0
outline_size = 6
outline_color = Color(0, 0, 0, 1)

[node name="Panel1" type="PanelContainer"]
custom_minimum_size = Vector2(100, 100)
theme_override_styles/panel = ExtResource("1_kk50v")
script = ExtResource("2_tk5gr")

[node name="TextureRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_0gdxt")
expand_mode = 1
stretch_mode = 3

[node name="TextureButton" type="TextureButton" parent="."]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_pressed = SubResource("GradientTexture2D_j0ijl")
texture_hover = SubResource("GradientTexture2D_i5mfc")

[node name="Label" type="Label" parent="."]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
text = "Linear Actuator"
label_settings = SubResource("LabelSettings_qfm0q")
horizontal_alignment = 1
vertical_alignment = 2
autowrap_mode = 2

[connection signal="mouse_entered" from="TextureButton" to="." method="_on_texture_button_mouse_entered"]
[connection signal="mouse_exited" from="TextureButton" to="." method="_on_texture_button_mouse_exited"]
[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
